--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>TEMG4950K Prototype</title>
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      const global = globalThis;
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
